--- a/_config.yml
+++ b/_config.yml
@@ -6,34 +6,34 @@ favicon: images/favicon.ico
 version: 2
 
 # Personal info
-name: Brett Harris
-title: Senior Network System Administrator
-email: brett.h@email.co.uk
-website: www.github.com/sproogen/resume-theme
+name: Won Wook (Wonook) SONG
+title: Ph.D. Candidate @SNU, advised by Prof. Byung-Gon Chun
+email: wonook@apache.org
+website: wonook.github.io
 
 # Dark Mode (true/false/never)
 darkmode: false
 
 # Social links
-twitter_username: facespics
-github_username:  sproogen
+twitter_username: wonooks
+github_username:  wonook
 # stackoverflow_username: "00000001"
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
-instagram_username: jameswgrant
-linkedin_username: jameswgrant
+instagram_username: wonooks
+linkedin_username: wonook
 # xing_username: jekyll
 # pinterest_username: jekyll
-youtube_username: globalmtb
+# youtube_username: globalmtb
 # googleplus_username: +jekyll
-# orcid_username: 0000-0000-0000-0000
+orcid_username: 0000-0002-8530-2184
 
 # Additional icon links
-additional_links:
-- title: itsgoingto.be
-  icon: fas fa-globe
-  url: https://www.itsgoingto.be
+# additional_links:
+# - title: itsgoingto.be
+#   icon: fas fa-globe
+#   url: https://www.itsgoingto.be
 # - title: another link
 #   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&m=free)
 #   url: Link url (eg. https://google.com)
@@ -46,71 +46,217 @@ additional_links:
 
 # About Section
 # about_title: About Me
-about_profile_image: images/profile.jpg
+about_profile_image: images/wonook_1x1_.jpeg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
+  Hi, my name's Won Wook (pronounced as Wonook) and I'm a Ph.D. candidate in Computer Science at Seoul National University, advised by Professor Byung-Gon Chun. My research interests reside in distributed systems for efficiently processing big data and machine learning workloads.
 
-  I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
+# I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
 
 content:
-  - title: Projects # Title for the section
+
+  - title: International Publications # Title for the section
+    layout: list # Type of content section (list/text)
+    content:
+      - layout: left
+        title: "Apache Nemo: A Framework for Optimizing Distributed Data Processing."
+        # link: boringcompany.com
+        # link_text: boringcompany.com
+        sub_title: 2021. Transactions on Computer Systems (TOCS). ACM.
+        # caption: November 2017 - Present
+        # quote: >
+          # Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+        description: | # this will include new lines to allow paragraphs
+            <mark>Won Wook Song</mark>, Youngseok Yang, Jeongyoon Eo, Jangho Seo, Joo Yeon Kim, Sanha Lee, Gyewon Lee, Taegeon Um, Haeyoon Cho, and Byung-Gon Chun
+      - layout: left
+        title: "Harmony: A Scheduling Framework Optimized for Multiple Distributed Machine Learning Jobs."
+        sub_title: 2021. International Conference on Distributed Computing Systems (ICDCS) ‘21. IEEE. 
+        description: | # this will include new lines to allow paragraphs
+            Woo-Yeon Lee, Yunseong Lee, <mark>Won Wook Song</mark>, Youngseok Yang, Joo Yeon Kim and Byung-Gon Chun
+      - layout: left
+        title: "Apache Nemo: A Framework for Building Distributed Dataflow Optimization Policies."
+        sub_title: 2019. USENIX Annual Technical Conference (ATC) ‘19. USENIX Association. ISBN 978-1-939133-03-8.
+        description: | # this will include new lines to allow paragraphs
+            Youngseok Yang, Jeongyoon Eo, Geon-Woo Kim, Joo Yeon Kim, Sanha Lee, Jangho Seo, <mark>Won Wook Song</mark>, and Byung-Gon Chun.
+      - layout: left
+        title: "Automatic System Configuration of Distributed Machine Learning."
+        sub_title: 2019. International Conference on Distributed Computing Systems (ICDCS) ‘19. IEEE. DOI https://doi.org/10.1109/ICDCS.2019.00203
+        description: | # this will include new lines to allow paragraphs
+            Woo-Yeon Lee, Yunseong Lee, Joo Seong Jeong, Gyeong-In Yu, Joo Yeon Kim, Ho Jin Park, Beomyeol Jeon, <mark>Won Wook Song</mark>, Gunhee Kim, Markus Weimer, Brian Cho, Byung-Gon Chun.
+      - layout: left
+        title: "Pado: A Data Processing Engine for Harnessing Transient Resources in Datacenters."
+        sub_title: 2017. EuroSys '17. ACM. DOI https://doi.org/10.1145/3064176.3064181
+        description: | # this will include new lines to allow paragraphs
+            Youngseok Yang, Geon-Woo Kim, <mark>Won Wook Song</mark>, Yunseong Lee, Andrew Chung, Zhengping Qian, Brian Cho, and Byung-Gon Chun.
+
+
+  - title: Domestic Publications # Title for the section
+    layout: list # Type of content section (list/text)
+    content:
+      - layout: left
+        title: "Tuning the XGBoost Library for Different Distinguishment Problems."
+        sub_title: 2020. KCC (Korea Computer Congress)
+        description: | # this will include new lines to allow paragraphs
+            <mark>Won Wook Song</mark>, and Byung-Gon Chun.
+      - layout: left
+        title: "Analyzing the Correctness of Estimated Task Time via Sampling on Distributed Data Processing System."
+        sub_title: 2020. KCC (Korea Computer Congress).
+        description: | # this will include new lines to allow paragraphs
+            Hwarim Hyun, <mark>Won Wook Song</mark>, and Byung-Gon Chun.
+      - layout: left
+        title: "Performance Analysis on Varying Parallelism for Different Distributed Data Processing  Workloads."
+        sub_title: 2019. KSC (Korea Software Congress).
+        description: | # this will include new lines to allow paragraphs
+            <mark>Won Wook Song</mark>, and Byung-Gon Chun.
+      - layout: left
+        title: "Effectiveness of using off-heap memory in Java Virtual Machine-based stream processing system."
+        caption: Best papers award
+        sub_title: 2019. KCC (Korea Computer Congress).
+        description: | # this will include new lines to allow paragraphs
+            Jangho Seo, <mark>Won Wook Song</mark>, and Byung-Gon Chun.
+      - layout: left
+        title: "Our Experiences on Creating an Apache Beam Runner for Distributed Data Processing."
+        caption: Best papers award
+        sub_title: 2018. KSC (Korea Software Congress).
+        description: | # this will include new lines to allow paragraphs
+            <mark>Won Wook Song</mark>, and Byung-Gon Chun.
+      - layout: left
+        title: "Comparison of Programming Interfaces of Distributed Data Processing Systems."
+        sub_title: 2018. KCC (Korea Computer Congress).
+        description: | # this will include new lines to allow paragraphs
+            <mark>Won Wook Song</mark>, and Byung-Gon Chun.
+
+  - title: Talks # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: top-middle
-        title: Super awesome project
-        link: github.com/sproogen
-        # link_text: Project Website
-        additional_links:
-          - title:  sproogen/modern-resume-theme
-            icon: fab fa-github
-            url: github.com/sproogen/modern-resume-theme
-          # - title:  Github page for project (eg. sproogen/modern-resume-theme)
-          #   icon: fab fa-github
-          #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
-        quote: >
-          This is probably one of the greatest apps ever created, if you don't agree you're probably wrong.
-        description: | # this will include new lines to allow paragraphs
-          I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
+        title: Running Apache Beam Programs on Apache Nemo
+        link: https://youtu.be/DKxYE8YWF_o
+        link_text: link
+        sub_title: Apache Beam Summit 2019, Berlin, Germany.
+        caption: 2019
+      - layout: top-middle
+        title: Fast and Efficient Data Processing with Apache Nemo
+        link: https://tv.naver.com/v/15151364
+        link_text: link
+        sub_title: Naver Tech Talk 2020, Seoul, South Korea.
+        caption: 2020
+      - layout: top-middle
+        title: A Flexible and an Extensible way of Big Data Processing. (In Korean)
+        link: https://tv.naver.com/v/2293702 
+        link_text: link
+        sub_title: Naver DeView 2017, Seoul, South Korea.
+        caption: 2017
+
+  - title: Education # Title for the section
+    layout: list # Type of content section (list/text)
+    content:
+      - layout: top-middle
+        title: Seoul National University, Seoul, Republic of Korea
+        sub_title: Ph.D. candidate, Computer Science
+        caption: 2017 - Present
+      - layout: top-middle
+        title: Seoul National University, Seoul, Republic of Korea
+        sub_title: B.S., Computer Science
+        caption: 2013 - 2017
+      - layout: top-middle
+        title: École Polytechnique Fédérale de Lausanne, Switzerland
+        sub_title: Exchange student, Informatiques (Computer Science)
+        caption: 2015 - 2016
+      - layout: top-middle
+        title: Hana Academy Seoul, Seoul, Republic of Korea
+        sub_title: Honors High School/Secondary Diploma Program
+        caption: 2010 - 2013
+      - layout: top-middle
+        title: American School of Paris, Paris, France
+        sub_title: General Education
+        caption: 2003 - 2009
+
+        # quote: >
+          # Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
+        # description: | # this will include new lines to allow paragraphs
+          # During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
+
+          # I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
+
 
   - title: Experience # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: The Boring Company
-        link: boringcompany.com
-        # link_text: boringcompany.com
-        sub_title: Senior Network System Administrator
-        caption: November 2017 - Present
-        quote: >
-          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+        title: Software Platform Lab,  Seoul, Republic of Korea
+        sub_title: A research intern, and now a PhD. candidate.
+        caption: MAY 2016 - PRESENT
+        # link: github.com/sproogen
+        # link_text: Project Website
+        # additional_links:
+          # - title:  sproogen/modern-resume-theme
+            # icon: fab fa-github
+            # url: github.com/sproogen/modern-resume-theme
+          # - title:  Github page for project (eg. sproogen/modern-resume-theme)
+          #   icon: fab fa-github
+          #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
+        # quote: >
+          # This is probably one of the greatest apps ever created, if you don't agree you're probably wrong.
         description: | # this will include new lines to allow paragraphs
-            Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
-
-  - title: Education # Title for the section
-    layout: list # Type of content section (list/text)
-    content:
+          - Published a paper on Pado, a data processing system for harnessing transient resources.
+          - Currently working on the Apache Nemo incubator project.
+          - Published a paper, Cruise, for automatically adjusting system configurations for distributed ML jobs.
+          - Published a paper, Harmony, a scheduling framework for optimizing the execution of multiple distributed ML jobs.
+          - Published a paper for the Apache Nemo project that builds dataflow optimization policies, as well as a journal paper with supplementary materials
+          - Currently applying machine learning techniques to optimize the execution of data processing applications on Apache Nemo.
       - layout: left
-        title: Harvard University
-        caption: 2010 - 2013
-        sub_title: BSc Computer Science
-        quote: >
-          Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
+        title: Apache Software Foundation
+        sub_title: GSoC student developer, mentor, and a committer.
+        caption: MAY 2016 - PRESENT
         description: | # this will include new lines to allow paragraphs
-          During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
-
-          I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
+          - Primary committer and a PMC member on the Apache Nemo incubator project.
+          - Accepted as a Google Summer of Code student developer for the Apache REEF project and finished the development of a ssh-standalone mode for running REEF in 2016.
+          - Participated in the Apache Nemo Web-UI project as a GSoC mentor in 2017.
+          - Contributing to other Apache projects, such as Apache Beam from 2018.
+          - Experience with tools like Apache Maven, JIRA, Git/GitHub, and many more.
+      - layout: left
+        title: ButFitSeoul, Seoul, Republic of Korea
+        sub_title: Part-time full-stack web developer
+        caption: MAY 2018 - AUG. 2020
+        link: https://www.butfitseoul.com
+        link_text: Website
+        description: | # this will include new lines to allow paragraphs
+          - Part of the team running the ButFitSeoul service, a platform for gathering people for group exercise workout programs, with thousands of participants.
+          - Used Django, VueJS, Fabric, Unicorn, and cooperated with web designers.
+          - Used Git, GitHub, AWS, GCP (Compute/EC2, RDBMS, Storage/S3, etc.)
+      - layout: left
+        title: ArtMyn, Lausanne, Switzerland
+        sub_title: Part time web/server developer
+        caption: NOV. 2015 - DEC. 2015
+        link: https://www.artmyn.com
+        link_text: Website
+        description: | # this will include new lines to allow paragraphs
+          - Used Django. Took care of the server-side materials (deployment and backend) for the start-up located in EPFL, Lausanne.
+      - layout: left
+        title: Systers, Anita Borg Institute
+        sub_title: GSoC student developer
+        caption: MAY 2015 - AUG. 2015
+        description: | # this will include new lines to allow paragraphs
+          - Accepted as a student developer for the Google Summer of code project on a Rails web application.
+          - Used Rails, PostgreSQL, ReactJS, minitest-rails, Capistrano, Passenger.
+          - Used Slack, Travis CI, Git/GitHub for communication.
+          - Experience with team members scattered all around the globe (Asia, America, Europe).
 
   - title: A Little More About Me
     layout: text
     content: | # this will include new lines to allow paragraphs
-      Alongside my interests in networks and software engineering some of my other interests and hobbies are:
-      - Rock climbing
-      - Gaming
-      - Knitting
-      - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
-
-      Look at this cool image  
-      ![Trees](/modern-resume-theme/images/landscape-trees.jpg "Trees")
+      Due to my experiences across the globe, I happen to be fluent in English and Korean, as well as an adequete French speaker. Alongside my interests in computer systems some of my other interests and hobbies are:
+      - Skiing and snowboarding
+      - Tennis
+      - Golf
+      - Running
+      - Cycling
+      - Swimming
+      - Motorcycle
+      - Photography
+      - Cocktails and Whiskey
+      - Doing interior work
+      - .. and a lot more
 
 # Footer
 footer_show_references: true
