--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ favicon: images/favicon.ico
 version: 2
 
 # Personal info
-name: Won Wook (Wonook) SONG
+name: Won Wook SONG
 title: Ph.D. Candidate @SNU, advised by Prof. Byung-Gon Chun
 email: wonook@apache.org
 website: wonook.github.io
@@ -57,7 +57,7 @@ content:
   - title: International Publications # Title for the section
     layout: list # Type of content section (list/text)
     content:
-      - layout: left
+      - layout: top
         title: "Apache Nemo: A Framework for Optimizing Distributed Data Processing."
         # link: boringcompany.com
         # link_text: boringcompany.com
@@ -67,22 +67,22 @@ content:
           # Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
         description: | # this will include new lines to allow paragraphs
             <mark>Won Wook Song</mark>, Youngseok Yang, Jeongyoon Eo, Jangho Seo, Joo Yeon Kim, Sanha Lee, Gyewon Lee, Taegeon Um, Haeyoon Cho, and Byung-Gon Chun
-      - layout: left
+      - layout: top
         title: "Harmony: A Scheduling Framework Optimized for Multiple Distributed Machine Learning Jobs."
         sub_title: 2021. International Conference on Distributed Computing Systems (ICDCS) ‘21. IEEE. 
         description: | # this will include new lines to allow paragraphs
             Woo-Yeon Lee, Yunseong Lee, <mark>Won Wook Song</mark>, Youngseok Yang, Joo Yeon Kim and Byung-Gon Chun
-      - layout: left
+      - layout: top
         title: "Apache Nemo: A Framework for Building Distributed Dataflow Optimization Policies."
         sub_title: 2019. USENIX Annual Technical Conference (ATC) ‘19. USENIX Association. ISBN 978-1-939133-03-8.
         description: | # this will include new lines to allow paragraphs
             Youngseok Yang, Jeongyoon Eo, Geon-Woo Kim, Joo Yeon Kim, Sanha Lee, Jangho Seo, <mark>Won Wook Song</mark>, and Byung-Gon Chun.
-      - layout: left
+      - layout: top
         title: "Automatic System Configuration of Distributed Machine Learning."
         sub_title: 2019. International Conference on Distributed Computing Systems (ICDCS) ‘19. IEEE. DOI https://doi.org/10.1109/ICDCS.2019.00203
         description: | # this will include new lines to allow paragraphs
             Woo-Yeon Lee, Yunseong Lee, Joo Seong Jeong, Gyeong-In Yu, Joo Yeon Kim, Ho Jin Park, Beomyeol Jeon, <mark>Won Wook Song</mark>, Gunhee Kim, Markus Weimer, Brian Cho, Byung-Gon Chun.
-      - layout: left
+      - layout: top
         title: "Pado: A Data Processing Engine for Harnessing Transient Resources in Datacenters."
         sub_title: 2017. EuroSys '17. ACM. DOI https://doi.org/10.1145/3064176.3064181
         description: | # this will include new lines to allow paragraphs
@@ -92,34 +92,34 @@ content:
   - title: Domestic Publications # Title for the section
     layout: list # Type of content section (list/text)
     content:
-      - layout: left
+      - layout: top
         title: "Tuning the XGBoost Library for Different Distinguishment Problems."
         sub_title: 2020. KCC (Korea Computer Congress)
         description: | # this will include new lines to allow paragraphs
             <mark>Won Wook Song</mark>, and Byung-Gon Chun.
-      - layout: left
+      - layout: top
         title: "Analyzing the Correctness of Estimated Task Time via Sampling on Distributed Data Processing System."
         sub_title: 2020. KCC (Korea Computer Congress).
         description: | # this will include new lines to allow paragraphs
             Hwarim Hyun, <mark>Won Wook Song</mark>, and Byung-Gon Chun.
-      - layout: left
+      - layout: top
         title: "Performance Analysis on Varying Parallelism for Different Distributed Data Processing  Workloads."
         sub_title: 2019. KSC (Korea Software Congress).
         description: | # this will include new lines to allow paragraphs
             <mark>Won Wook Song</mark>, and Byung-Gon Chun.
-      - layout: left
+      - layout: top
         title: "Effectiveness of using off-heap memory in Java Virtual Machine-based stream processing system."
         caption: Best papers award
         sub_title: 2019. KCC (Korea Computer Congress).
         description: | # this will include new lines to allow paragraphs
             Jangho Seo, <mark>Won Wook Song</mark>, and Byung-Gon Chun.
-      - layout: left
+      - layout: top
         title: "Our Experiences on Creating an Apache Beam Runner for Distributed Data Processing."
         caption: Best papers award
         sub_title: 2018. KSC (Korea Software Congress).
         description: | # this will include new lines to allow paragraphs
             <mark>Won Wook Song</mark>, and Byung-Gon Chun.
-      - layout: left
+      - layout: top
         title: "Comparison of Programming Interfaces of Distributed Data Processing Systems."
         sub_title: 2018. KCC (Korea Computer Congress).
         description: | # this will include new lines to allow paragraphs
@@ -131,42 +131,42 @@ content:
       - layout: top-middle
         title: Running Apache Beam Programs on Apache Nemo
         link: https://youtu.be/DKxYE8YWF_o
-        link_text: link
+        # link_text: link
         sub_title: Apache Beam Summit 2019, Berlin, Germany.
         caption: 2019
       - layout: top-middle
         title: Fast and Efficient Data Processing with Apache Nemo
         link: https://tv.naver.com/v/15151364
-        link_text: link
+        # link_text: link
         sub_title: Naver Tech Talk 2020, Seoul, South Korea.
         caption: 2020
       - layout: top-middle
         title: A Flexible and an Extensible way of Big Data Processing. (In Korean)
         link: https://tv.naver.com/v/2293702 
-        link_text: link
+        # link_text: link
         sub_title: Naver DeView 2017, Seoul, South Korea.
         caption: 2017
 
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
     content:
-      - layout: top-middle
+      - layout: top
         title: Seoul National University, Seoul, Republic of Korea
         sub_title: Ph.D. candidate, Computer Science
         caption: 2017 - Present
-      - layout: top-middle
+      - layout: top
         title: Seoul National University, Seoul, Republic of Korea
         sub_title: B.S., Computer Science
         caption: 2013 - 2017
-      - layout: top-middle
+      - layout: top
         title: École Polytechnique Fédérale de Lausanne, Switzerland
         sub_title: Exchange student, Informatiques (Computer Science)
         caption: 2015 - 2016
-      - layout: top-middle
+      - layout: top
         title: Hana Academy Seoul, Seoul, Republic of Korea
         sub_title: Honors High School/Secondary Diploma Program
         caption: 2010 - 2013
-      - layout: top-middle
+      - layout: top
         title: American School of Paris, Paris, France
         sub_title: General Education
         caption: 2003 - 2009
@@ -190,8 +190,8 @@ content:
         # link_text: Project Website
         # additional_links:
           # - title:  sproogen/modern-resume-theme
-            # icon: fab fa-github
-            # url: github.com/sproogen/modern-resume-theme
+          #   icon: fab fa-github
+          #   url: github.com/sproogen/modern-resume-theme
           # - title:  Github page for project (eg. sproogen/modern-resume-theme)
           #   icon: fab fa-github
           #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
@@ -219,7 +219,7 @@ content:
         sub_title: Part-time full-stack web developer
         caption: MAY 2018 - AUG. 2020
         link: https://www.butfitseoul.com
-        link_text: Website
+        # link_text: Website
         description: | # this will include new lines to allow paragraphs
           - Part of the team running the ButFitSeoul service, a platform for gathering people for group exercise workout programs, with thousands of participants.
           - Used Django, VueJS, Fabric, Unicorn, and cooperated with web designers.
@@ -229,7 +229,7 @@ content:
         sub_title: Part time web/server developer
         caption: NOV. 2015 - DEC. 2015
         link: https://www.artmyn.com
-        link_text: Website
+        # link_text: Website
         description: | # this will include new lines to allow paragraphs
           - Used Django. Took care of the server-side materials (deployment and backend) for the start-up located in EPFL, Lausanne.
       - layout: left
@@ -245,8 +245,8 @@ content:
   - title: A Little More About Me
     layout: text
     content: | # this will include new lines to allow paragraphs
-      Due to my experiences across the globe, I happen to be fluent in English and Korean, as well as an adequete French speaker. Alongside my interests in computer systems some of my other interests and hobbies are:
-      - Skiing and snowboarding
+      Due to my experiences across the globe, I happen to be fluent in English and Korean, as well as in French. Alongside my interests in computer systems some of my other interests and hobbies are:
+      - Skiing & Snowboarding
       - Tennis
       - Golf
       - Running
@@ -254,8 +254,9 @@ content:
       - Swimming
       - Motorcycle
       - Photography
-      - Cocktails and Whiskey
-      - Doing interior work
+      - Travelling
+      - Cocktails & Whiskey
+      - Interior work & Building homes
       - .. and a lot more
 
 # Footer
