throw some emojis in

--- a/_config.yml
+++ b/_config.yml
@@ -279,18 +279,18 @@ content:
   - title: A Little More About Me
     layout: text
     content: | # this will include new lines to allow paragraphs
-      Due to my experiences across the globe, I happen to speak fluent English and Korean, as well as adequate French. Alongside my interests in computer systems some of my other interests and hobbies are:
-      - Skiing & Snowboarding
-      - Tennis
-      - Golf
-      - Running
-      - Cycling
-      - Swimming
-      - Motorcycle
-      - Photography
-      - Travelling
-      - Cocktails & Whiskey
-      - Interior work & Building homes
+      Due to my experiences across the globe, I happen to speak fluent English and Korean, as well as adequate French. Alongside my interests in computer systems 👨‍💻 some of my other interests and hobbies are:
+      - Skiing & Snowboarding ⛷🏂
+      - Tennis 🎾
+      - Golf ⛳️🏌️‍♂️
+      - Running 🏃‍♂️
+      - Cycling 🚴‍♂️
+      - Swimming 🏊‍♂️
+      - Motorcycle 🛵
+      - Photography 📷
+      - Travelling 🎒✈️
+      - Cocktails & Whiskey 🍸🥃
+      - Interior work & Building homes 🔨
       - .. and a lot more
 
 # Footer
