--- a/_config.yml
+++ b/_config.yml
@@ -358,18 +358,18 @@ content:
   - title: A Little More About Me
     layout: text
     content: | # this will include new lines to allow paragraphs
-      Due to my experiences across the globe, I happen to speak fluent English and Korean, as well as adequate French. Alongside my interests in computer systems 👨‍💻 some of my other interests and hobbies are:
+      Due to my experiences across the globe, I happen to speak fluent English and Korean, as well as adequate French. Alongside my interests in computer systems 👨‍💻 some of my other interests are:
       - Skiing & Snowboarding ⛷🏂
       - Tennis 🎾
-      - Golf ⛳️🏌️‍♂️
+      - Golfing ⛳️🏌️‍♂️
       - Running 🏃‍♂️
       - Cycling 🚴‍♂️
       - Swimming 🏊‍♂️
-      - Motorcycle 🛵
+      - My Italian motorbike 🛵
       - Photography 📷
       - Travelling 🎒✈️
-      - Cocktails & Whiskey 🍸🥃
-      - Interior work & Building homes 🔨
+      - Cocktails & Cognac & Wine & Whiskey 🍸🥃
+      - Doing my interior & Building homes and furnitures 🔨
       - .. and a lot more
 
 # Footer
