--- a/_config.yml
+++ b/_config.yml
@@ -194,7 +194,7 @@ content:
     content:
       - layout: top-middle
         title: Flexible Optimizations and Efficient Execution of Data Processing on Apache Nemo
-        link: https://apachecon.com/acasia2021/sessions/1140.html
+        link: https://youtu.be/lFCuiL9ZRWk
         sub_title: ApacheCon Asia 2021.
         caption: AUG. 2021
       - layout: top-middle
