--- a/_config.yml
+++ b/_config.yml
@@ -59,8 +59,8 @@ content:
     content:
       - layout: top
         title: "Apache Nemo: A Framework for Optimizing Distributed Data Processing"
-        # link: boringcompany.com
-        # link_text: boringcompany.com
+        link: https://dl.acm.org/doi/pdf/10.1145/3468144
+        link_text: Click for full text
         sub_title: 2021. Transactions on Computer Systems (TOCS). ACM. DOI https://doi.org/10.1145/3468144
         # caption: November 2017 - Present
         # quote: >
@@ -68,27 +68,29 @@ content:
         description: | # this will include new lines to allow paragraphs
             *Won Wook Song*, Youngseok Yang, Jeongyoon Eo, Jangho Seo, Joo Yeon Kim, Sanha Lee, Gyewon Lee, Taegeon Um, Haeyoon Cho, and Byung-Gon Chun
         additional_links:
-          # - title: Link
-            # icon: fa fa-paperclip
-            # url: 
-          # - title: paper
-            # icon: fa fa-sticky-note-o
-            # url: 
+          - title: Link
+            icon: fa fa-paperclip
+            url: https://doi.org/10.1145/3468144
+          - title: paper
+            icon: fa fa-sticky-note-o
+            url: https://dl.acm.org/doi/pdf/10.1145/3468144
           - title: github
             icon: fab fa-github
             url: https://github.com/apache/incubator-nemo
       - layout: top
         title: "Harmony: A Scheduling Framework Optimized for Multiple Distributed Machine Learning Jobs"
+        link: https://ieeexplore.ieee.org/document/9546495
+        link_text: Click for full text
         sub_title: 2021. International Conference on Distributed Computing Systems (ICDCS) ‘21. IEEE. 
         description: | # this will include new lines to allow paragraphs
             Woo-Yeon Lee, Yunseong Lee, *Won Wook Song*, Youngseok Yang, Joo Yeon Kim and Byung-Gon Chun
         additional_links:
-          # - title: Link
-            # icon: fa fa-paperclip
-            # url: 
-          # - title: paper
-            # icon: fa fa-sticky-note-o
-            # url: 
+          - title: Link
+            icon: fa fa-paperclip
+            url: https://ieeexplore.ieee.org/document/9546495
+          - title: paper
+            icon: fa fa-sticky-note-o
+            url: https://ieeexplore.ieee.org/document/9546495
           - title: github
             icon: fab fa-github
             url: https://github.com/snuspl/harmony
