--- a/_config.yml
+++ b/_config.yml
@@ -58,6 +58,26 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: top
+        title: "SWAN: WAN-aware Stream Processing on Geographically-distributed Clusters"
+        link: https://apsys22.hotcrp.com/doc/apsys22-paper20.pdf
+        link_text: Link is upcoming.
+        sub_title: 2022. Asia-Pacific Workshop on Systems (APSys). ACM SIGOPS. DOI https://doi.org/
+        # caption: November 2017 - Present
+        # quote: >
+          # Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+        description: | # this will include new lines to allow paragraphs
+            *Won Wook Song*, Myeongjae Jeon, and Byung-Gon Chun
+        additional_links:
+          # - title: Link
+          #   icon: fa fa-paperclip
+          #   url: https://doi.org/10.1145/3468144
+          # - title: paper
+          #   icon: fa fa-sticky-note-o
+          #   url: https://dl.acm.org/doi/pdf/10.1145/3468144
+          # - title: github
+          #   icon: fab fa-github
+          #   url: https://github.com/apache/incubator-nemo
+      - layout: top
         title: "Apache Nemo: A Framework for Optimizing Distributed Data Processing"
         link: https://dl.acm.org/doi/pdf/10.1145/3468144
         link_text: Click for full text
