--- a/_config.yml
+++ b/_config.yml
@@ -167,6 +167,13 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: top
+        title: "Analyzing the Effectiveness of Skew Handling Strategy Based on Fine-Grained Splitting and Merging on Distributed Data Processing System."
+        link: https://www.dbpia.co.kr/journal/articleDetail?nodeId=NODE11036174
+        link_text: Click for full text
+        sub_title: 2021. KCC (Korea Computer Congress)
+        description: | # this will include new lines to allow paragraphs
+            Hwarim Hyun, *Won Wook Song*, and Byung-Gon Chun.
+      - layout: top
         title: "Tuning the XGBoost Library for Different Distinguishment Problems."
         link: https://www.dbpia.co.kr/journal/articleDetail?nodeId=NODE09874468
         link_text: Click for full text
