--- a/_config.yml
+++ b/_config.yml
@@ -101,13 +101,13 @@ content:
         title: "Harmony: A Scheduling Framework Optimized for Multiple Distributed Machine Learning Jobs"
         link: https://ieeexplore.ieee.org/document/9546495
         link_text: Click for full text
-        sub_title: 2021. International Conference on Distributed Computing Systems (ICDCS) ‘21. IEEE. 
+        sub_title: 2021. International Conference on Distributed Computing Systems (ICDCS) ‘21. IEEE. DOI https://doi.org/10.1109/ICDCS51616.2021.00085
         description: | # this will include new lines to allow paragraphs
             Woo-Yeon Lee, Yunseong Lee, *Won Wook Song*, Youngseok Yang, Joo Yeon Kim and Byung-Gon Chun
         additional_links:
           - title: Link
             icon: fa fa-paperclip
-            url: https://ieeexplore.ieee.org/document/9546495
+            url: https://doi.org/10.1109/ICDCS51616.2021.00085
           - title: paper
             icon: fa fa-sticky-note-o
             url: https://ieeexplore.ieee.org/document/9546495
@@ -118,7 +118,7 @@ content:
         title: "Apache Nemo: A Framework for Building Distributed Dataflow Optimization Policies"
         link: https://www.usenix.org/system/files/atc19-yang-youngseok.pdf
         link_text: Click for full text
-        sub_title: 2019. USENIX Annual Technical Conference (ATC) ‘19. USENIX Association. ISBN 978-1-939133-03-8. DOI https://doi.org/10.5555/3358807.3358824
+        sub_title: 2019. USENIX Annual Technical Conference (ATC) ‘19. USENIX Association. ISBN 978-1-939133-03-8. DOI https://dl.acm.org/doi/10.5555/3358807.3358824
         description: | # this will include new lines to allow paragraphs
             Youngseok Yang, Jeongyoon Eo, Geon-Woo Kim, Joo Yeon Kim, Sanha Lee, Jangho Seo, *Won Wook Song*, and Byung-Gon Chun.
         additional_links:
