--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ version: 2
 name: Won Wook SONG
 title: Ph.D. Candidate at Seoul Nat'l University, advised by Prof. Byung-Gon Chun
 email: wonook@apache.org
+# phone: Your phone number (optional)
 website: wonook.github.io
 
 # Dark Mode (true/false/never)
@@ -25,17 +26,17 @@ instagram_username: wonooks
 linkedin_username: wonook
 # xing_username: jekyll
 # pinterest_username: jekyll
-# youtube_username: globalmtb
-# googleplus_username: +jekyll
+# youtube_username: jekyll
 orcid_username: 0000-0002-8530-2184
+googlescholar_username: OKtsXwMAAAAJ
 
 # Additional icon links
 # additional_links:
-# - title: itsgoingto.be
-#   icon: fas fa-globe
-#   url: https://www.itsgoingto.be
+# - title: Link name
+  # icon: Font Awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
+  # url: Link url (eg. https://google.com)
 # - title: another link
-#   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&m=free)
+#   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
 #   url: Link url (eg. https://google.com)
 
 # Google Analytics and Tag Manager
@@ -48,7 +49,7 @@ gtag: "G-CD8QRK5MDY"
 # about_title: About Me
 about_profile_image: images/wonook_1x1_.jpeg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Won Wook (pronounced as Wonook, written as 원욱) and I'm a Ph.D. candidate in Computer Science at Seoul National University, advised by Professor Byung-Gon Chun. My research interests reside in distributed systems for efficiently processing big data and machine learning workloads.
+  Hi, my name's Won Wook (pronounced as Wonook, written as 원욱) and I'm a Ph.D. candidate in Computer Science at Seoul National University, advised by Professor Byung-Gon Chun. I'm about to graduate in August 2023, and my research interests reside in distributed systems for efficiently processing big data and machine learning workloads.
 
 # I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
 
