--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ website: wonook.github.io
 darkmode: never
 
 # Social links
-twitter_username: wonooks
+# twitter_username: wonooks
 github_username:  wonook
 # stackoverflow_username: "00000001"
 # dribbble_username: jekyll
