--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ gtag: "G-CD8QRK5MDY"
 
 # About Section
 # about_title: About Me
-about_profile_image: images/wonook_1x1_.jpeg
+about_profile_image: images/wonook2_1x1_.jpeg
 about_content: | # this will include new lines to allow paragraphs
   Hi, my name's Won Wook (pronounced as Wonook, written as 원욱) and I'm a Ph.D. candidate in Computer Science at Seoul National University, advised by Professor Byung-Gon Chun. I'm about to graduate in August 2023, and my research interests reside in distributed systems for efficiently processing big data and machine learning workloads.
 
